--- a/docs/linux/reference-memfaultd-configuration.mdx
+++ b/docs/linux/reference-memfaultd-configuration.mdx
@@ -116,6 +116,17 @@ A [full configuration example can be found in the source directory of
     "rate_limit_duration_seconds": 3600,
     "storage_max_usage_kib": 0,
     "storage_min_headroom_kib": 10240
+  },
+  "fluent-bit": {
+    "extra_fluentd_attributes": [],
+    "bind_address": "127.0.0.1:5170",
+    "max_buffered_lines": 1000,
+    "max_connections": 4
+  },
+  "logs": {
+    "rotate_size_kib": 10240,
+    "rotate_after_seconds": 3600,
+    "tmp_folder": "tmplogs"
   }
 }
 ```
@@ -245,6 +256,67 @@ holding area inside the [`data_dir`][docs-data-dir].
 
 Finally, the coredump is added to the upload queue. This queue is serviced
 periodically (see the top-level `refresh_interval_seconds`).
+
+### `fluent-bit`
+
+```json
+{
+  "fluent-bit": {
+    "extra_fluentd_attributes": [],
+    "bind_address": "127.0.0.1:5170",
+    "max_buffered_lines": 1000,
+    "max_connections": 4
+  }
+}
+```
+
+| Field                      | Description                                                                                                                                                        | Recommended value |
+| -------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------- |
+| `extra_fluentd_attributes` | List of fluentd attributes to save beyond [the defaults][docs-logging-extra-attributes]                                                                            | `[]`              |
+| `bind_address`             | Address and port to bind the fluent-bit listener to.<br/>Replacing `127.0.0.1` by `0.0.0.0` will open the log collection service to the network (not recommended). | `127.0.0.1:5170`  |
+| `max_buffered_lines`       | Maximum number of lines to buffer in memory before applying backpressure to fluent-bit.                                                                            | 10000             |
+| `max_connections`          | Maximum number of simultaneous connected sockets with fluent-bit.                                                                                                  | 4                 |
+
+[docs-logging-extra-attributes]:
+  http://localhost:3000/docs/linux/logging#fluent-bitextra_fluentd_attributes
+
+### `logs`
+
+```json
+{
+  "logs": {
+    "rotate_size_kib": 10240,
+    "rotate_after_seconds": 3600,
+    "tmp_folder": "tmplogs"
+  }
+}
+```
+
+| Field                  | Description                                                                                                                          | Recommended value                    |
+| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------ |
+| `rotate_after_seconds` | Log files will be rotated when they reach this number of seconds.                                                                    | 3600                                 |
+| `rotate_size_kib`      | Log files will be rotated when they reach this size (in kibibytes).                                                                  | 10240 (10 MiB)                       |
+| `tmp_folder`           | Where to store logfiles while they are being written. If this path does not start with a `/`, it will be relative to the `data_dir`. | `tmplogs` (so `{data_dir}/tmplogs`). |
+
+### `mar`
+
+```
+{
+  "mar": {
+    "storage_max_usage_kib": 102400
+  }
+}
+```
+
+| Field                   | Description                                             | Recommended value |
+| ----------------------- | ------------------------------------------------------- | ----------------- |
+| `storage_max_usage_kib` | Maximum disk space used by `memfaultd` for MAR entries. | 102400 (100 MiB)  |
+
+`memfaultd` will transform log files into MAR entries on disk and keep them in
+the MAR staging area until they are uploaded.
+
+Older entries will be deleted automatically to keep the total size smaller than
+`storage_max_usage_kib`.
 
 [collectd-chains]: https://collectd.org/wiki/index.php/Chains
 [collectd-configuration]: /docs/linux/metrics#configuring-collectd
