Add note about Custom Report quota limit (#423)
Add note about Custom Report quota

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -29,7 +29,8 @@ Below is a list of the APIs and payloads that may be rate-limited:
         <Link to="/docs/platform/metrics">Metrics</Link> (both Timeseries and
         Attributes) are created.{" "}
         <Link to="/docs/platform/memfault-terminology/">Heartbeats</Link> are
-        built on top of Custom Reports.
+        built on top of Custom Reports and are limited to 100 per device per
+        24-hour period.
       </td>
     </tr>
     <tr id="latest-release">
