Refresh the demo cli doc (#422)
I noticed that we don't call out the dep for
`memfault_platform_log_raw()` in our docs. Add a note and refresh some
related content.

--- a/docs/mcu/demo-cli.mdx
+++ b/docs/mcu/demo-cli.mdx
@@ -4,6 +4,9 @@ title: Using the Demo CLI
 sidebar_label: Using the Demo CLI
 ---
 
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
 Most reference implementations of the Memfault embedded SDK include a Command
 Line Interface (CLI) demo app. The demo CLI lets you explore features of the SDK
 components before integrating the SDK into your product. You might also find it
@@ -13,37 +16,91 @@ Memfault implementation.
 This guide explains the commands available in the demo CLI and how to interpret
 their output.
 
-## Starting the CLI
+## Enabling the Demo CLI
 
-The CLI runs on the embedded device itself and communicates with a host computer
-over a communications interface. The interface varies depending on what is
-available on the target but it will commonly be serial (UART), Segger RTT, or
-semihosting. The `README` file for the reference implementation will explain the
-interface and any steps needed to wire it up. The console works the same
-regardless of the interface used.
+:::note
 
-The CLI is started with an [Invoke](http://www.pyinvoke.org/) command similar to
-this:
+On some platforms with integrated Memfault support (Zephyr or ESP-IDF), the demo
+component is enabled automatically, but will have no effect on the target if the
+system shell is not enabled. On unhosted platforms, see the instructions below
+for enabling the Demo CLI.
 
+:::
+
+To include the Demo component in your project, the `demo` sources will need to
+be added. Select the tab below that applies to your project.
+
+<Tabs
+defaultValue="make"
+  values={[
+    {label: 'Make', value: 'make'},
+    {label: 'CMake', value: 'cmake'},
+    {label: 'Other/IDE', value: 'other'},
+  ]}
+  queryString="add-sources"
+  >
+
+<TabItem value="make">
+
+Include the `demo` component in the `MEMFAULT_COMPONENTS` list:
+
+```makefile
+MEMFAULT_COMPONENTS := core util panics metrics demo
 ```
-$ invoke NAME.console
+
+</TabItem>
+
+<TabItem value="cmake">
+
+Include the `demo` component in the `MEMFAULT_COMPONENTS` list:
+
+```cmake
+include(${MEMFAULT_SDK_ROOT}/cmake/Memfault.cmake)
+
+list(APPEND MEMFAULT_COMPONENTS core util panics metrics demo)
+memfault_library(${MEMFAULT_SDK_ROOT} MEMFAULT_COMPONENTS
+  MEMFAULT_COMPONENTS_SRCS MEMFAULT_COMPONENTS_INC_FOLDERS)
 ```
 
-Replace `NAME` with the name of the reference implementation. The `README` file
-for the implementation will give the exact command. If the `invoke` command does
-not halt with an error message, the console is active and can accept commands.
+</TabItem>
 
-ℹ️ The `invoke` command does more than just pass through characters as a
-terminal would. It actively listens to the connection and provides a special
-feature used with the [`print_chunk`](#print_chunk) command that is described
-below.
+<TabItem value="other">
+
+The `demo` component files are located here:
+
+- sources: `memfault-firmware-sdk/components/demo/`
+- includes: `memfault-firmware-sdk/components/include/memfault/demo/`
+
+Add the source files to the project, and add the include directory to the
+preprocessor search directories.
+
+</TabItem>
+
+</Tabs>
+
+The Demo component has an additional dependency that must be implemented:
+`memfault_platform_log_raw()`. An example implementation can be found below,
+which uses `printf` as the output backend.
+
+```c
+#include <stdarg.h>
+#include <stdio.h>
+
+void memfault_platform_log_raw(const char *fmt, ...) {
+  va_list args;
+  va_start(args, fmt);
+  vprintf(fmt, args);
+  printf("\n");
+  va_end(args);
+}
+```
 
 ## Running a Command
 
 The CLI displays a prompt to indicate it is ready to accept a command. To see if
 the CLI is running, press enter and the prompt should be printed:
 
-```
+```bash
 mflt>
 ```
 
@@ -56,14 +113,14 @@ started.
 
 The `help` command shows all available commands. Type `help` and press enter:
 
-```
+```bash
 mflt> help
 get_device_info: Get device info
 crash: Trigger a crash
 get_core: Get coredump info
 clear_core: Clear an existing coredump
 trace: Capture trace event
-print_chunk: Get next Memfault data chunk to send and print as a curl command
+export: Get next Memfault data chunk to send and print as a curl command
 help: Lists all commands
 mflt>
 ```
@@ -78,7 +135,7 @@ will not have that command.
 The `get_device_info` command shows the information configured in the reference
 implementation's `memfault_platform_get_device_info()`:
 
-```
+```bash
 mflt> get_device_info
 MFLT: [INFO] S/N: 123456789012345678901234
 MFLT: [INFO] SW type: NAME-main
@@ -108,7 +165,7 @@ The crash will be intercepted by the fault handler in the Memfault `panics`
 component, a coredump will be generated and stored, and then the device
 rebooted:
 
-```
+```bash
 mflt> crash
 MFLT: [INFO] Memfault demo app started...
 mflt>
@@ -125,13 +182,13 @@ reference implementation you are using in case it has other instructions.
 Once the prompt has returned, the storage can be checked with the
 [`get_core`](#get_core) command. It can then be cleared with
 [`clear_core`](#clear_core) or read out of the coredump storage with
-[`print_chunk`](#print_chunk).
+[`export`](#export).
 
 ⚠️ Once a coredump has been stored in the coredump storage, it will remain there
 until either storage is cleared ([`clear_core`](#clear_core) command) or read
-out ([`print_chunk`](#print_chunk) command). If you `crash` again without doing
-one of these, saving the coredump will fail silently. The device will still
-crash and reset but the existing coredump will not be overwritten.
+out ([`export`](#export) command). If you `crash` again without doing one of
+these, saving the coredump will fail silently. The device will still crash and
+reset but the existing coredump will not be overwritten.
 
 ### `get_core`
 
@@ -139,7 +196,7 @@ The `get_core` command displays the state of the coredump storage.
 
 If a coredump is present in the coredump storage:
 
-```
+```bash
 mflt> get_core
 MFLT: [INFO] Has coredump with size: 20224
 mflt>
@@ -147,7 +204,7 @@ mflt>
 
 If a coredump is not present:
 
-```
+```bash
 mflt> get_core
 MFLT: [INFO] No coredump present!
 mflt>
@@ -161,7 +218,7 @@ the coredump storage.
 The `clear_core` command unconditionally invalidates the coredump storage so
 that a new coredump can be stored:
 
-```
+```bash
 mflt> clear_core
 MFLT: [INFO] Invalidating coredump
 mflt>
@@ -175,59 +232,34 @@ coredump was present in the coredump storage or not.
 The `trace` command captures a [trace event](trace-events.mdx) and writes it to
 the event storage.
 
-```
+```bash
 mflt> trace
 mflt>
 ```
 
 Once a trace has been captured, it can be read out of the event storage with the
-[`print_chunk`](#print_chunk) command.
+[`export`](#export) command.
 
 ⚠️ The event storage is completely separate from the coredump storage. The
 commands `get_core` and `clear_core` work only on the coredump storage. There
 are no equivalents for the event storage.
 
-### `print_chunk`
+### `export`
 
-The `print_chunk` command reads out all data from both the coredump storage and
-the event storage. It then formats this data into a
+The `export` command reads out all data from both the coredump storage and the
+event storage. It then formats this data into a base64-encoded
 [chunk](data-from-firmware-to-the-cloud.mdx) that can be sent to the Memfault
-cloud. Since not all devices have direct internet connectivity, `print_chunk`
-encodes the chunk into shell command that sends it to Memfault using
-[`curl`](https://curl.haxx.se/):
+cloud using one of the
+[strategies described here](/docs/mcu/arm-cortex-m-guide/#post-chunks-to-memfault).
 
-```
-mflt> print_chunk
-echo \
-... \
-| xxd -p -r | curl -X POST https://chunks.memfault.com/api/v0/chunks/xyz\
- -H 'Memfault-Project-Key:abc'\
- -H 'Content-Type:application/octet-stream' --data-binary @- -i
+```bash
+# example export command output
+mflt> export
+MC:CAKnAgIDAQpqemVwaHlyLWFwcAltMS4wLjArZGJkZWI0OAZucWVtdV9jb3J0ZXhfbTMLRvknGqz1fwSiAQAFAMQ5:
+MC:SE8CpwIBAwEKanplcGh5ci1hcHAJbTEuMC4wK2RiZGViNDgGbnFlbXVfY29ydGV4X20zC0b5Jxqs9X8EoQGIAAEBGQyIGefcGfWnGQ+0GQw=:
 ```
 
-The `curl` command can be copy/pasted into a shell and run. However, if you are
-running the demo CLI via the Invoke wrapper as recommended in this guide, you
-should see this prompt:
-
-```
-Invoke CLI wrapper detected 'print_chunk' call
-Would you like to run the command displayed above? [y/n]
-```
-
-The above prompt comes from your computer, not from the demo CLI running on the
-target. The Invoke wrapper monitors all output from the demo CLI and when it
-detects the output from the `print_chunk` command, it interrupts the session and
-offers to run the `curl` command automatically.
-
-After you accept (or decline) to run the `curl` command, the Invoke wrapper will
-return you to your session with the demo CLI. If you don't see the `mflt>`
-prompt, press enter and it should appear:
-
-```
-mflt>
-```
-
-⚠️ The `print_chunk` command has the side effect of clearing the data. After the
+⚠️ The `export` command has the side effect of clearing the data. After the
 [packetizer](data-from-firmware-to-the-cloud.mdx) consumes the coredump storage
 and the event storage, they will both be cleared and ready for new data.
 
@@ -241,7 +273,7 @@ uploads. You probably need to
 The `post_chunk` command is available on targets with direct network
 connectivity:
 
-```
+```bash
 mflt> post_chunk
 Posting data to the Memfault cloud...
 All data has been posted!
@@ -273,11 +305,11 @@ component:
   - [`crash`](#crash)
   - [`get_core`](#get_core)
   - [`clear_core`](#clear_core)
-  - [`print_chunk`](#print_chunk)
+  - [`export`](#export)
   - [`post_chunk`](#post_chunk)
 - Trace Events
   - [`trace`](#trace)
-  - [`print_chunk`](#print_chunk)
+  - [`export`](#export)
   - [`post_chunk`](#post_chunk)
 
 ## Implementation Notes
@@ -294,3 +326,49 @@ The demo CLI itself is implemented as two components:
 - `demo/memfault_demo_cli` implements the actual demo. It has one function for
   each command on the CLI. Each function typically calls one function in the
   SDK, checks the result, and formats the output.
+
+## Using Invoke Commands in the SDK
+
+The CLI runs on the embedded device itself and communicates with a host computer
+over a communications interface. The interface varies depending on what is
+available on the target but it will commonly be serial (UART), Segger RTT, or
+semihosting. The `README` file for the example implementations explains the
+interface and any steps needed to wire it up. The console works the same
+regardless of the interface used.
+
+The CLI is started with an [Invoke](http://www.pyinvoke.org/) command similar to
+this:
+
+```bash
+$ invoke NAME.console
+```
+
+Replace `NAME` with the name of the reference implementation (eg `mbed`). The
+`README` file for the implementation will give the exact command. If the
+`invoke` command does not halt with an error message, the console is active and
+can accept commands.
+
+ℹ️ The `invoke` command does more than just pass through characters as a
+terminal would. It actively listens to the connection and provides a special
+feature used with the [`export`](#export) command.
+
+If you are running the demo CLI via the Invoke wrapper,you should see this
+prompt:
+
+```plaintext
+Invoke CLI wrapper detected 'export' call
+Would you like to run the command displayed above? [y/n]
+```
+
+The above prompt comes from your computer, not from the demo CLI running on the
+target. The Invoke wrapper monitors all output from the demo CLI and when it
+detects the output from the `export` command, it interrupts the session and
+offers to run the `curl` command automatically.
+
+After you accept (or decline) to run the `curl` command, the Invoke wrapper will
+return you to your session with the demo CLI. If you don't see the `mflt>`
+prompt, press enter and it should appear:
+
+```bash
+mflt>
+```
