--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -29,10 +29,10 @@ Currently Memfault supports the following ESP32 part families. If it's not
 listed, we might be working on it already! Drop us a note at
 [support@memfault.com](mailto:support@memfault.com) and we'll let you know!
 
-- [ESP32](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32/get-started/index.html)
-- [ESP32-S2](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s2/get-started/index.html)
-- [ESP32-S3](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s3/get-started/index.html)
-- [ESP32-C3](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32c3/get-started/index.html)
+- [ESP32 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32/get-started/index.html)
+- [ESP32-S2 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s2/get-started/index.html)
+- [ESP32-S3 (Xtensa)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32s3/get-started/index.html)
+- [ESP32-C3 (RISC-V)](https://docs.espressif.com/projects/esp-idf/en/v5.0.1/esp32c3/get-started/index.html)
 
 :::
 
