MFLT-9421 Publish a raspberry pi version of the quickstart guide (#430)
MFLT-9421 Publish a raspberry pi version of the quickstart guide

--- a/docs/linux/quickstart.mdx
+++ b/docs/linux/quickstart.mdx
@@ -1,7 +1,7 @@
 ---
 id: quickstart
-title: Quick Start
-sidebar_label: Quick Start
+title: Quick Start with QEMU
+sidebar_label: Quick Start (QEMU)
 ---
 
 import { ProjectMagicLink } from "@site/src/components/ProjectMagicLink";
